@@ -1,3 +1,7 @@
+2010-05-23 Ray Chen <chenrano2002@gmail.com>
+
+    * Use "yum clean all" command when clean YUM cache
+
 2010-05-22 HAN Haofu <gtxx3600@gmail.com>
 
 	* Optimize the behaviour of lib.notify()
